# MinEx

./: .gitignore  CMakeLists.txt  Notes.txt
include/mx/core/: messages.hpp  types.hpp
include/mx/engine/: engine.hpp  event_sink.hpp
src/engine/: engine.cpp
src/tools/: sim_cli.cpp
tests/golden/scripts/: basic.txt
